--- a/locales/eo.strings
+++ b/locales/eo.strings
@@ -1,5 +1,6 @@
+#include <en>
+
 "__locale" = "eo.utf8";
-"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
