--- a/locales/sr_cyr.strings
+++ b/locales/sr_cyr.strings
@@ -1,5 +1,6 @@
+#include <ru>
+
 "__locale" = "sr_CS.UTF-8;Srb";
-"__fallback" = "ru";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
