--- a/locales/by_lat.strings
+++ b/locales/by_lat.strings
@@ -1,6 +1,7 @@
+#include <ru>
+
 "__locale" = "be_BY@latin;Bel_Lat";
 "__WinEncoding" = "Windows-1251";
-"__fallback" = "ru";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
