--- a/locales/pl.strings
+++ b/locales/pl.strings
@@ -1,6 +1,7 @@
+#include <en>
+
 "__locale" = "pl_PL.utf8;pl_PL.UTF-8;Pol";
 "__WinEncoding" = "Windows-1251";
-"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
