--- a/locales/sr_lat.strings
+++ b/locales/sr_lat.strings
@@ -1,5 +1,6 @@
+#include <en>
+
 "__locale" = "sr_CS.UTF-8;Srb_Latin";
-"__fallback" = "en";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
