About: Some fixes Translate the title and increase the size of the topic status column to fit the text there

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -752,6 +752,10 @@
 "paginator_page" = "Page $1";
 "paginator_next" = "Next";
 
+/* About */
+
+"about_openvk" = "About OpenVK";
+
 /* Dialogs */
 
 "ok" = "OK";
