Support: Ability to respond with configurable quick replies to tickets

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -639,6 +639,8 @@
 "support_rated_bad" = "Вы оставили негативный отзыв об ответе.";
 "wrong_parameters" = "Неверные параметры запроса.";
 
+"fast_answers" = "Быстрые ответы";
+
 "comment" = "Комментарий";
 "sender" = "Отправитель";
 
@@ -799,6 +801,7 @@
 "cancel" = "Отмена";
 "edit_action" = "Изменить";
 "transfer" = "Передать";
+"close" = "Закрыть";
 
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
