--- a/locales/en.strings
+++ b/locales/en.strings
@@ -610,6 +610,8 @@
 "support_rated_bad" = "You left a negative feedback about the answer.";
 "wrong_parameters" = "Invalid request parameters.";
 
+"fast_answers" = "Fast answers";
+
 "comment" = "Comment";
 "sender" = "Sender";
 
@@ -764,6 +766,7 @@
 "cancel" = "Cancel";
 "edit_action" = "Change";
 "transfer" = "Transfer";
+"close" = "Close";
 
 "warning" = "Warning";
 "question_confirm" = "This action can't be undone. Do you really wanna do it?";
