--- a/locales/en.strings
+++ b/locales/en.strings
@@ -745,6 +745,7 @@
 
 "login_as" = "Login as $1";
 "manage_user_action" = "Manage user";
+"manage_group_action" = "Manage group";
 "ban_user_action" = "Ban user";
 "warn_user_action" = "Warn user";
 
