--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -807,3 +807,7 @@
 
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
+
+/* User alerts */
+
+"user_alert_scam" = "На этот аккаунт много жаловались в связи с мошенничеством. Пожалуйста, будьте осторожны, особенно если у вас попросят денег.";
