L10n: Kazakh: Typo fix
:DDDDDD

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -252,7 +252,7 @@
 "group_dont_display_administrators_list" = "Ештеңе көрсетпеу";
 
 "group_changeowner_modal_title" = "Топтың иесі құқықтарың беру";
-"group_changeowner_modal_text" = "Назар аударыңыз! Сіх $1 деп аталатын пайдаланушыға топтың иесі құқықтарын берудесіз. Бұл әрекет қайтымсыз. Бергеннен кейін сіз топтың әкімшісі боласыз, бірақ оның жаңа иесі сізді оңай сол рөлден алып тастай алады.";
+"group_changeowner_modal_text" = "Назар аударыңыз! Сіз $1 деп аталатын пайдаланушыға топтың иесі құқықтарын берудесіз. Бұл әрекет қайтымсыз. Бергеннен кейін сіз топтың әкімшісі боласыз, бірақ оның жаңа иесі сізді оңай сол рөлден алып тастай алады.";
 "group_owner_setted" = "Топтың жаңа иесі ($1) $2 тобына сәтті тағайындалды. Сізге топтың әкімші құқықтары берілді. Қайтіп топтың иесі болғыңыз келсе <a href='/support?act=new'>қолдау көрсету тобына</a> жазыңыз.";
 
 "participants_zero" = "Қатысушылар жоқ";
