Fix list.yml, Soviet & Udm fix
Исправление файла list.yml и перевод новых строк на Советский и Удмуртский языки.

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -69,3 +69,13 @@ list:
     name: "Esperanto"
     native_name: "Esperanto"
     author: "n1rwana"
+  - code: "su"
+    flag: "su"
+    name: "Soviet"
+    native_name: "Советский"
+    author: "mohooks"
+  - code: "udm"
+    flag: "udm"
+    name: "Udmurtskiy"
+    native_name: "Удмуртский"
+    author: "mohooks"
