--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -18,7 +18,7 @@
 "forgot_password" = "Запамятовали шифръ?";
 
 "login_failed" = "Не удалось войти";
-"invalid_username_or_password" = "Невѣрное имя пользователя или шифръ. <a href='/restore.pl'>Забыли шифръ?</a>";
+"invalid_username_or_password" = "Невѣрное имя пользователя или шифръ. <a href='/restore'>Забыли шифръ?</a>";
 
 "failed_to_register" = "Не удалось зарегистрироваться";
 "referral_link_invalid" = "Пригласительная ссылка недѣйствительна.";
