Global: Add user option to hide ad poster

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -412,6 +412,7 @@
 "ui_settings_rating_hide" = "Hide";
 
 "additional_links" = "Additional links";
+"ad_poster" = "Ad poster";
 
 /* Two-factor authentication */
 
