--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -432,6 +432,7 @@
 "ui_settings_rating_hide" = "Скрывать";
 
 "additional_links" = "Дополнительные ссылки";
+"ad_poster" = "Рекламный плакат";
 
 /* Two-factor authentication */
 
